# khala-agentmemory

./: .gitignore  .gitmodules  01-operational.md  03-coding.md  AGENTS.md  Dockerfile  MANIFEST.in  README.md  check_agent_tool.py  check_socratic.py  check_strategies.py  check_strategies_missing.py  debug_surreal.py  engineering_report.md  memlist.md  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.py  setup.py  tree.md  verify_clustering.py
docs/: 00-draft.md  00-index.md  000-MODULE-IMPLEMENTATION-REPORT.md  000-review-report.md  001-project-plan-and-tasks.md  002-strategy-master.md  003-tech-architecture.md  004-ops-manual.md  01-plan-overview.md  01-plan.md  01-plans-semantic-router.md  01-plans-surrealist.md  02-tasklist-completed.md  02-tasks-UI.md  02-tasks-implementation.md  02-tasks-memodb-harvest.md  02-tasks-outofscope.md  02-tasks-semantic-router.md  02-tasks.md  03-architecture-technical.md  03-architecture.md  03-codebase-assessment.md  04-changelog.md  04-database-schema.md  05-api.md  05-ideas.md  06-adaptation-harvest.md  06-rules.md  06-strategies-master.md  07-deployment.md  08-testing.md  09-security.md  10-monitoring.md  16-arc-harvest.md  16-brutal-test-plan.md  17-deep-research-harvest-consolidated.md  17-deep-research-harvest.md  17-harvest-architecture.md  18-remaining-strategies-plan.md  18-semantic-router-harvest.md  (+27 more)
docs/00-archive/: 00-INDEX-MASTER.md  01-plan.md  02-tasks.md  03-architecture.md  04-database.md  05-api.md  A SurrealDB possui 6 tipos de modelos de database_.md  AGENTS.md  CODE_AUTOPSY_REPORT.md  IMPLEMENTATION_CHECKLIST.md  KHALA-Investigation-Summary.md  KHALA_ANALYSIS_REPORT.md  KHALA_IMPROVEMENTS_ANALYSIS.md  KHALA_IMPROVEMENTS_SUMMARY.md  KHALA_v2_UPGRADED_GUIDE.md  PRODUCTION_CODE_COMPLETE.md  agno-surrealdb-analise-completa.md  agno-surrealdb-sumario-executivo.md  audit_report_2025_12_04.md  implementation-guide-complete.md  novel_strategies_extracted.csv  test_gap_analysis.md
docs/01-plans/: khala-guide-structure.md  memodb.md  technical-debt.md  ui-ux.md
docs/UI/: UI_TASKLIST.md
docs/_archive/: 00-index.md  000-AGENT-ANALYSIS-PLAN.md  001-implementation-audit.md  02-tasks.md  03-architecture.md  11-surrealdb-optimization.md  (+15 more)
examples/: integration_test.py  subagent_demo.py  test_cloud_surreal.py  verify_agent_os_practical.py
guide/: 00-index.md  01-getting-started.md  02-architecture-overview.md  03-core-concepts.md  04-features-and-capabilities.md  05-configuration-reference.md  06-developer-guide.md  07-troubleshooting.md
khala/: __init__.py  debug_intent.py
khala_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rules/: 00-prime-directives.md
scripts/: check_conn.py  check_verification.py  cost_dashboard.py  generate_reports.py  harvest_metadata.py  http_server.py  khala_admin.surql  run_all_tests.py  start_mcp.sh  verify_creds.py
tasks/: 02_entity_extraction_service.md  04_agno_agent_integration.md
tests/: test_concept_cartography.py  test_migration_tracking.py  test_module_09.py  test_monitoring.py  verify_tier6.py
(+411 files in other folders)
