[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khala-memory"
version = "2.0.0"
description = "KHALA v2.0 - Knowledge Hierarchical Adaptive Long-term Agent (Consolidated)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "KHALA Team", email = "khala@example.com"}
]
keywords = ["ai", "agent", "memory", "surrealdb", "agno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agno>=2.2.0",
    "surrealdb>=1.0.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "openai>=2.6.0",
    "redis>=7.0.0",
    "pydantic>=2.12.0",
    "numpy>=2.3.0",
    "asyncio-mqtt>=0.16.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.0.0",
    "faker>=19.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.15.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
khala = "khala.interface.cli.main:cli"

[tool.setuptools.packages.find]
include = ["khala*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=khala",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "khala.examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "surrealdb.*",
    "google.*",
    "openai.*",
    "redis.*",
]
ignore_missing_imports = true
